syntax ="proto3";

import "google/protobuf/empty.proto";
package replication;
option go_package = "handin5.dk/uni;grpc";

service Auction{
    rpc sendBid (Bid) returns (Ack) {}
    rpc getResults (google.protobuf.Empty) returns (Result) {}
    rpc sendBidToFrontEnd (FeBid) returns (Ack) {}
}



message FeBid {
    Bid Bid = 1;
}

message Bid{
    int32 BidAmount = 1;
    int32 Id = 2;
}

message Ack{
    string outcome = 1;
}

message Result{
    bool inProcess =1;
    int32 highestBid =2;
}
